using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;


internal class AnimationStrings
{
    internal static string isGrounded = "isGrounded";
    internal static string canMove = "canMove";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
}
